Set mb_version for CustomModuleBuild

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,7 @@ copyright_holder = Christopher J. Madsen
 [PodLoom]
 data = tools/loom.pl
 [CustomModuleBuild]
+mb_version = 0.21
 [MatchManifest]
 [GitVersionCheckCJM]
 [TemplateCJM]
