--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,13 @@ mb_version = 0.21
 [Repository]
 git_remote = github
 
+[@Git]
+allow_dirty = Changes
+commit_msg  = Updated Changes for %{MMMM d, yyyy}d release of %v
+tag_format  = %v
+tag_message = Tagged %N %v
+push_to     = github
+
 [UploadToCPAN]
 [ArchiveRelease]
 directory = cjm_releases
