--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ copyright_holder = Christopher J. Madsen
 [ExtraTests]
 [PodLoom]
 data = tools/loom.pl
-[CustomModuleBuild]
+[ModuleBuild::Custom]
 mb_version = 0.21
 [MatchManifest]
 [GitVersionCheckCJM]
