Updated dist.ini for Dist::Zilla 2 Don't index PostScript::Calendar::Interpolation

--- a/dist.ini
+++ b/dist.ini
@@ -6,12 +6,13 @@ copyright_holder = Christopher J. Madsen
 
 [VersionFromModule]
 
-[AllFiles]
+[GatherDir]
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
 [License]
-[PodTests]
+[PodSyntaxTests]
+[PodCoverageTests]
 [ExtraTests]
 [PodLoom]
 data = tools/loom.pl
@@ -40,16 +41,13 @@ perl             = 5.8.0 ; PostScript::File 1.03 requires this
 Date::Calc       = 5.0
 PostScript::File = 2.01  ; Need metrics
 
-[MetaRecommends]
+[Prereq / RuntimeRecommends]
 Astro::MoonPhase = 0.60 ; Need phaselist
 
-[BuildReq]
+[Prereq / BuildRequires]
 FindBin          = 0
-Module::Build    = 0.21
 Test::More       = 0
-
-[ConfigReq]
-Module::Build    = 0.21
 
 [MetaNoIndex]
 directory = tools
+package   = PostScript::Calendar::Interpolation
