--- a/dist.ini
+++ b/dist.ini
@@ -4,37 +4,9 @@ author  = Christopher J. Madsen <perl@cjmweb.net>
 license = Perl_5
 copyright_holder = Christopher J. Madsen
 
-[VersionFromModule]
-
-[GatherDir]
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[PodSyntaxTests]
-[PodCoverageTests]
-[ExtraTests]
-[PodLoom]
-data = tools/loom.pl
-[ModuleBuild::Custom]
+[@CJM]
+builder    = ModuleBuild::Custom
 mb_version = 0.21
-[MatchManifest]
-[GitVersionCheckCJM]
-[TemplateCJM]
-
-[Repository]
-git_remote = github
-
-[@Git]
-allow_dirty = Changes
-commit_msg  = Updated Changes for %{MMMM d, yyyy}d release of %v
-tag_format  = %v
-tag_message = Tagged %N %v
-push_to     = github
-
-[UploadToCPAN]
-[ArchiveRelease]
-directory = cjm_releases
 
 [Prereq]
 perl             = 5.8.0 ; PostScript::File 1.03 requires this
