Require Test::More 0.88 for done_testing
  Prereq is now called Prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -8,17 +8,19 @@ copyright_holder = Christopher J. Madsen
 builder    = ModuleBuild::Custom
 mb_version = 0.21
 
-[Prereq]
+[Prereqs]
 perl             = 5.8.0 ; PostScript::File 1.03 requires this
 Date::Calc       = 5.0
 PostScript::File = 2.01  ; Need metrics
 
-[Prereq / RuntimeRecommends]
+[Prereqs / RuntimeRecommends]
 Astro::MoonPhase = 0.60 ; Need phaselist
 
-[Prereq / BuildRequires]
+[Prereqs / BuildRequires]
 FindBin          = 0
-Test::More       = 0
+
+[Prereqs / TestRequires]
+Test::More       = 0.88 ; done_testing
 
 [MetaNoIndex]
 directory = tools
