--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ author  = Christopher J. Madsen <perl@cjmweb.net>
 license = Perl_5
 copyright_holder = Christopher J. Madsen
 
-[@CJM]
+[@Author::CJM / CJM]
 builder    = ModuleBuild::Custom
 mb_version = 0.21
 
