Use AutoPrereqs & RecommendedPrereqs
  Move My_Build.pm from tools to inc
  Fix Pod::Coverage patterns
  Bump version to 1.01

--- a/dist.ini
+++ b/dist.ini
@@ -5,23 +5,19 @@ license = Perl_5
 copyright_holder = Christopher J. Madsen
 
 [@Author::CJM / CJM]
+:version   = 4.12 ; want Test::PrereqsFromMeta
 builder    = ModuleBuild::Custom
 mb_version = 0.21
 
-[Prereqs]
-perl             = 5.8.0 ; PostScript::File 1.03 requires this
-Date::Calc       = 5.0
-PostScript::File = 2.01  ; Need metrics
+[FileFinder::ByName / :BuildPL]
+file = Build.PL
 
-[Prereqs / RuntimeRecommends]
-Astro::MoonPhase = 0.60 ; Need phaselist
-
-[Prereqs / BuildRequires]
-FindBin          = 0
-
-[Prereqs / TestRequires]
-Test::More       = 0.88 ; done_testing
+[AutoPrereqs]
+:version = 4.300005 ; configure_finder
+skip = ^(?:lib|strict|utf8|warnings|Astro::MoonPhase)$
+configure_finder = :BuildPL
+configure_finder = :IncModules
 
 [MetaNoIndex]
-directory = tools
+directory = inc
 package   = PostScript::Calendar::Interpolation
