--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license = Perl_5
 copyright_holder = Christopher J. Madsen
 
 [@Author::CJM / CJM]
-:version   = 4.12 ; want Test::PrereqsFromMeta
+:version   = 4.32 ; use latest versions
 builder    = ModuleBuild::Custom
 mb_version = 0.21
 
